hphp/hack/test/typecheck/class_get_nested.php
<?hh // strict

final class Foo {
  public function bar(): void {
    self::self::$x;
  }
}
